--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   </head>
   <body>
     <header>
-
+      <div class="header-container">
+        <div class="box-header">
+          <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/max2020/mnemonics/photoshop.svg" alt="">
+          <h1>Crea. Credi in te. Fidati di Photoshop.</h1>
+          <h6>Accedi a Photoshop su PC e iPad a soli 9,75 €/mese.</h6>
+          <div class="buttons-container">
+            <button type="button" name="button">Prova gratuita</button>
+            <button type="button" name="button">Acquista</button>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
       <section id="intro" class="text-center">
