--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="header-container">
         <div class="box-header">
-          <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/max2020/mnemonics/photoshop.svg" alt="">
+          <img class="logo-header" src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/max2020/mnemonics/photoshop.svg" alt="">
           <h1>Crea. Credi in te. Fidati di Photoshop.</h1>
           <h6>Accedi a Photoshop su PC e iPad a soli 9,75 €/mese.</h6>
           <div class="buttons-container">
